Corregir error 500 en solicitud de mantenimiento: manejo de numeros de serie duplicados, sanitizacion de nombres de archivos y proteccion de nulos